--- a/config/local.env
+++ b/config/local.env
@@ -1,9 +1,9 @@
-db_host=localhost 
-db_port=5432
-db_user=postgres
-db_pass=postgres
-db_name=avtor
-main_account_id=47abdfa6-edbf-4257-8ffd-985d1b4c5922
-main_account_name=edb
-super_user_username=decapo01
-super_user_password=!Q2w3e4r5t
+export db_host=localhost 
+export db_port=5556
+export db_user=avtor
+export db_pass=avtor
+export db_name=avtor
+export main_account_id=47abdfa6-edbf-4257-8ffd-985d1b4c5922
+export main_account_name=edb
+export super_user_username=decapo01
+export super_user_password=!Q2w3e4r5t
