--- a/avtor-cli/Cargo.toml
+++ b/avtor-cli/Cargo.toml
@@ -12,4 +12,8 @@ tokio = { version = "1.17.0", features = ["full"] }
 tokio-postgres = { version = "0.7.5", features=["with-uuid-0_8", "with-chrono-0_4"] }
 serde = "1.0"
 serde_yaml = "0.8"
-dotenv = "0.15.0"
+dotenv = "0.15"
+envy = "0.4.0"
+uuid = "*"
+anyhow = "*"
+chrono = "*"
